<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_marginBottom="15dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/line_border">

            <ImageView
                android:id="@+id/food_row_image"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:background="@drawable/spinner_border"
                android:contentDescription="@string/food_image"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/food_row_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/food_row_image"
                android:paddingHorizontal="15dp"
                android:text="@string/food_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/food_row_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/food_row_name"
                android:layout_toEndOf="@id/food_row_image"
                android:paddingVertical="5dp"
                android:paddingHorizontal="15dp"
                android:text="@string/food_category"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/food_row_calorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/food_row_category"
                android:layout_toEndOf="@id/food_row_image"
                android:paddingVertical="5dp"
                android:paddingHorizontal="15dp"
                android:text="@string/food_calorie_cal_g"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/edit_food_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="8dp"
                android:background="@drawable/recycler_border"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/delete_food_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/recycler_border"
                android:paddingHorizontal="13sp"
                android:text="@string/x"
                android:textColor="@color/white"
                android:textSize="13sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>