<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activities.CompleteSignUpActivity">

    <TextView
        android:id="@+id/complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/complete_your_information"
        android:textColor="@color/mBlue"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gender"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:gravity="start"
            android:text="@string/gender"
            android:textColor="@color/mBlue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:buttonTint="@color/mBlue"
                android:checked="true"
                android:text="@string/male"
                android:textColor="@color/mBlue" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/mBlue"
                android:text="@string/female"
                android:textColor="@color/mBlue" />
        </RadioGroup>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/weight"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="start"
            android:text="@string/weight"
            android:textColor="@color/mBlue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/minus_icon"
                android:onClick="MinusWeight" />

            <EditText
                android:id="@+id/picker_weight"
                android:layout_width="87dp"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:background="@drawable/line_border"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="3"
                android:text="@string/default_weight"
                android:textDirection="ltr"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/add_icon"
                android:onClick="AddWeight" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:text="@string/kg"
            android:textColor="@color/mBlue"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/height"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="start"
            android:text="@string/height"
            android:textColor="@color/mBlue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/minusHeight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/minus_icon"
                android:onClick="MinusHeight" />


            <EditText
                android:id="@+id/picker_height"

                android:layout_width="87dp"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:background="@drawable/line_border"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="3"
                android:text="@string/default_height"
                android:textDirection="ltr"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/addHeight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/add_icon"
                android:onClick="AddHeight" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:text="@string/cm"
            android:textColor="@color/mBlue"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="start"
            android:text="@string/date_of_birth"
            android:textColor="@color/mBlue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/date"
            android:layout_width="157dp"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@drawable/border"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/dd_mm_yyyy"
            android:inputType="datetime"
            android:onClick="DatePicker" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveData"
        style="@style/Theme.AppCompat"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:background="@drawable/button_border"
        android:backgroundTint="@color/mBlue"
        android:onClick="SaveData"
        android:text="@string/save_data"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/pb_complete_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:visibility="gone" />

</LinearLayout>
